[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "samvad"
version = "0.1.0"
description = "Counterspeech generation with fine-tuned LLMs"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "torch>=2.0.0",
]

[project.scripts]
samvad = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "data*"]